--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_storage: ^13.0.1
   cloud_firestore: ^6.0.1
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
